fix: iOS 15 Safari hrotizontal scrollbar bug for input

--- a/packages/docusaurus-enlight/src/_common.scss
+++ b/packages/docusaurus-enlight/src/_common.scss
@@ -150,6 +150,8 @@ input {
     background: var(--text-color-5);
     border-radius: .3em;
     transition: box-shadow .2s ease;
+    // Fix iOS 15 Safari hrotizontal scrollbar bug
+    width: 100%;
 
     &:active,
     &:focus {
